# LaughCounter

./: .claudinite-checks.json  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-yamnet.txt
.claude/: settings.json
.claudinite/shared/engine/checks/: check_the_world.mjs
.claudinite/shared/packs/grow_with_claudinite/skills/unattended-agents/: SKILL.md
.claudinite/shared/packs/grow_with_claudinite/tasks/conversation-extract/: task.md
.github/workflows/: build-macos-dmg.yml  release-macos-dmg.yml
dev/procedures/: CLAUDE.md  ci-release.md  mac-audio-lifecycle.md
docs/: DESIGN-AND-TRADEOFFS.md
laughcounter/: __init__.py  __main__.py  audio.py  cli.py  clips.py  config.py  counter.py  dashboard.py  events.py  notify.py  speaker.py  stats.py  storage.py
laughcounter/detector/: __init__.py  base.py  mock.py  robust.py  yamnet.py
mac/: Package.swift  README.md
mac/Resources/: Info.plist  LaughCounter.entitlements
mac/Sources/LaughCounter/: AppDelegate.swift  AppLog.swift  AudioHub.swift  Chime.swift  LaughCounter.swift  LaughDetector.swift  Store.swift  VoiceCommand.swift  main.swift
mac/scripts/: build-app.sh  gen-icon.py  make-dmg.sh  notarize-dmg.sh
tests/: test_cli.py  test_clips.py  test_config.py  test_counter.py  test_dashboard.py  test_feedback.py  test_speaker.py  test_stats.py  test_storage.py
