[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "laughcounter"
version = "0.1.0"
description = "Listen for laughter at home, count it, and log it — privacy-first."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LaughCounter" }]
keywords = ["laughter", "audio", "yamnet", "quantified-self", "logging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
# The core has zero third-party dependencies.
dependencies = []

[project.optional-dependencies]
# Real microphone capture + the YAMNet laughter model (the default detector).
yamnet = [
    "numpy>=1.21",
    "sounddevice>=0.4",
    "tensorflow>=2.11",
    "tensorflow-hub>=0.13",
]
# Optional "who laughed?" speaker attribution (ECAPA-TDNN embeddings).
speaker = [
    "numpy>=1.21",
    "torch>=1.13",
    "speechbrain>=0.5",
]
dev = ["pytest>=7"]

[project.scripts]
laughcounter = "laughcounter.cli:main"

[project.urls]
Homepage = "https://github.com/missingbulb/laughcounter"

[tool.setuptools.packages.find]
include = ["laughcounter*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
